--- a/tutorials/linear_bar.ipynb
+++ b/tutorials/linear_bar.ipynb
@@ -428,8 +428,7 @@
    "source": [
     "### Example Problem 2\n",
     "\n",
-    "In this second example, we will solve a simple problem consisting of a structure with length `L = 4.0 m`, cross-sectional area `A = 0.005 m^2` and elasticity modulus `E = 70 GPa`. The structure is fixed at one end and subjected to a force of `F = 15 kN` at the other end; the second node is subjected to a force of `F' = 10 kN` in the opposite direction with respect to the first one\n",
-    "Finally, the structure is composed of 3 linear bar elements of lengths `L_e = 1.0, 2.0, 1.0 m`, which means that 4 nodes are needed to define the problem. The cross-sectional area is constant for all elements.\n",
+    "In this second example, we will solve a simple problem consisting of a structure with length `L = 4.0 m`, cross-sectional area `A = 0.005 m^2` and elasticity modulus `E = 70 GPa`. The structure is fixed at one end and subjected to a force of `F = 15 kN` at the other end; the second node is subjected to a force of `F' = 10 kN` in the opposite direction with respect to the first one. Finally, the structure is composed of 3 linear bar elements of lengths `L_e = 1.0, 2.0, 1.0 m`, which means that 4 nodes are needed to define the problem. The cross-sectional area is constant for all elements.\n",
     "\n",
     "### Solution Steps using CSM\n",
     "\n",
