--- a/tutorials/linear_bar.ipynb
+++ b/tutorials/linear_bar.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "### Example Problem 1\n",
     "\n",
-    "In this first example, we will solve a simple problem consisting of a tapered bar with a length `L = 3.0 m`, a cross-sectional area `A(x) = 0.002 + (0.01 * x)/3 (m^2)` and an elasticity modulus `E = 210 GPa`. The bar is fixed at one end and subjected to a force of `F = 18 kN` at the other end; finally, the bar is composed of 5 linear bar elements of equal length `L_e = 0.6 m`, which means that 6 nodes are needed to define the problem. The cross-sectional area for each element is computed at the center of the element."
+    "In this first example, we will solve a simple problem consisting of a tapered bar with a length `L = 3.0 m`, a cross-sectional area `A(x) = 0.002 + (0.01 * x)/3 (m^2)` and an elasticity modulus `E = 210 MPa`. The bar is fixed at one end and subjected to a force of `F = 18 kN` at the other end; finally, the bar is composed of 5 linear bar elements of equal length `L_e = 0.6 m`, which means that 6 nodes are needed to define the problem. The cross-sectional area for each element is computed at the center of the element."
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 19,
    "id": "209c4591",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 20,
    "id": "b34b76a9",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 21,
    "id": "caa36bd2",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 22,
    "id": "fec521ef",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 23,
    "id": "287b3e33",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 24,
    "id": "dfac102b",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 25,
    "id": "577acf9d",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 26,
    "id": "178987ac",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 27,
    "id": "ab41cc4b",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 28,
    "id": "96e0485b",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 29,
    "id": "73ee51fe",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 30,
    "id": "2f9017b3",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Element 4 forces (kN):\n",
+      "Element 5 forces (kN):\n",
       "[-18.  18.]\n"
      ]
     }
@@ -386,7 +386,7 @@
     "# For example, get the element forces for the 5-th element (index 4)\n",
     "f = bar.get_element_force(4)\n",
     "# Print the element forces\n",
-    "print(\"Element 4 forces (kN):\")\n",
+    "print(\"Element 5 forces (kN):\")\n",
     "print(f)"
    ]
   },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 31,
    "id": "ac82220a",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Element 4 stresses (kN/m^2):\n",
+      "Element 5 stresses (kN/m^2):\n",
       "[-1636.36363636  1636.36363636]\n"
      ]
     }
@@ -417,7 +417,7 @@
     "# For example, get the element stresses for the 5-th element (index 4)\n",
     "stress = bar.get_element_stress(4)\n",
     "# Print the element stresses\n",
-    "print(\"Element 4 stresses (kN/m^2):\")\n",
+    "print(\"Element 5 stresses (kN/m^2):\")\n",
     "print(stress)"
    ]
   },
@@ -428,7 +428,7 @@
    "source": [
     "### Example Problem 2\n",
     "\n",
-    "In this second example, we will solve a simple problem consisting of a structure with length `L = 4.0 m`, cross-sectional area `A = 0.005 m^2` and elasticity modulus `E = 70 GPa`. The structure is fixed at one end and subjected to a force of `F = 15 kN` at the other end; the second node is subjected to a force of `F' = 10 kN` in the opposite direction with respect to the first one. Finally, the structure is composed of 3 linear bar elements of lengths `L_e = 1.0, 2.0, 1.0 m`, which means that 4 nodes are needed to define the problem. The cross-sectional area is constant for all elements.\n",
+    "In this second example, we will solve a simple problem consisting of a structure with length `L = 4.0 m`, cross-sectional area `A = 0.005 m^2` and elasticity modulus `E = 70 MPa`. The structure is fixed at one end and subjected to a force of `F = 15 kN` at the other end; the second node is subjected to a force of `F' = 10 kN` in the opposite direction with respect to the first one. Finally, the structure is composed of 3 linear bar elements of lengths `L_e = 1.0, 2.0, 1.0 m`, which means that 4 nodes are needed to define the problem. The cross-sectional area is constant for all elements.\n",
     "\n",
     "### Solution Steps using CSM\n",
     "\n",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 32,
    "id": "6adff2fb",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 33,
    "id": "d0fcaf83",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 34,
    "id": "e5c15cbf",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 35,
    "id": "efe0901e",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 36,
    "id": "4957c194",
    "metadata": {},
    "outputs": [
