--- a/tutorials/plane_truss.ipynb
+++ b/tutorials/plane_truss.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "### Example Problem 1\n",
     "\n",
-    "In this first example, we will solve a simple problem consisting of a plane truss structure of triangular shape composed of three elements and three nodes. The triangular truss has a base of `L = 4.0 m` and a height of `h = 3.0 m`; the cross-sectional area of the elements is `A = 1e-4 m^2` and the elasticity modulus is `E = 210 GPa`. The truss is subjected to a vertical load of `F = 10 kN` and a horizontal load of `F = 5 kN` at the top node. At the bottom nodes external constraints are applied: specifically, the left node is fixed in both directions by an hinge, while the right node is fixed in the vertical direction only by a roller."
+    "In this first example, we will solve a simple problem consisting of a plane truss structure of triangular shape composed of three elements and three nodes. The triangular truss has a base of `L = 4.0 m` and a height of `h = 3.0 m`; the cross-sectional area of the elements is `A = 1e-4 m^2` and the elasticity modulus is `E = 210 MPa`. The truss is subjected to a vertical load of `F = 10 kN` and a horizontal load of `F = 5 kN` at the top node. At the bottom nodes external constraints are applied: specifically, the left node is fixed in both directions by an hinge, while the right node is fixed in the vertical direction only by a roller."
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "id": "8c8ea547",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 117,
    "id": "95a28142",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 118,
    "id": "56bdbf48",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 119,
    "id": "b3bb91d8",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 120,
    "id": "aa826d2d",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 121,
    "id": "1014ebd8",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 122,
    "id": "6cff8acd",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 123,
    "id": "5cd11cb1",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 124,
    "id": "1b1fb737",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 125,
    "id": "58a121f7",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 126,
    "id": "69dfcefc",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "e718eabb",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stress of the third element (MPa):\n",
+      "Stress of the third element (Pa):\n",
       "-105161.91220103303\n"
      ]
     }
@@ -418,7 +418,7 @@
     "# For example, get the element stress for the third element (index 2)\n",
     "stress = truss.get_element_stress(2)\n",
     "# Print the stress of the third element\n",
-    "print(\"Stress of the third element (MPa):\")\n",
+    "print(\"Stress of the third element (Pa):\")\n",
     "print(stress)"
    ]
   },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 128,
    "id": "b7ce442e",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
    "source": [
     "### Example Problem 2\n",
     "\n",
-    "In this second example, we will solve a problem consisting of a plane truss structure of rectangular shape composed of six elements and four nodes. The rectangular truss has a base `L = 4.0 m` and a height `h = 3.5 m`; the cross-sectional area of the elements is `A = 0.004 m^2` and the elasticity modulus is `E = 70 GPa`. The third node of the plane truss is subjected to an horizontal load of `F = 30 kN`. The first node is fixed in both directions by an hinge, while to the fourth node an inclined support is applied at an angle of `alpha = 45°`.\n",
+    "In this second example, we will solve a problem consisting of a plane truss structure of rectangular shape composed of six elements and four nodes. The rectangular truss has a base `L = 4.0 m` and a height `h = 3.5 m`; the cross-sectional area of the elements is `A = 0.004 m^2` and the elasticity modulus is `E = 70 MPa`. The third node of the plane truss is subjected to an horizontal load of `F = 30 kN`. The first node is fixed in both directions by an hinge, while to the fourth node an inclined support is applied at an angle of `alpha = 45°`.\n",
     "\n",
     "### Solution Steps using CSM\n",
     "\n",
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 129,
    "id": "86e407f7",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 130,
    "id": "ea054fec",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 131,
    "id": "c1c8e786",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 132,
    "id": "938f6b79",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 133,
    "id": "8b701071",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 134,
    "id": "f11d51ef",
    "metadata": {},
    "outputs": [
@@ -665,17 +665,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stress of the element 0 (MPa):\n",
+      "Stress of the element 0 (Pa):\n",
       "3179.1201787172517\n",
-      "Stress of the element 1 (MPa):\n",
+      "Stress of the element 1 (Pa):\n",
       "-4142.542362323818\n",
-      "Stress of the element 2 (MPa):\n",
+      "Stress of the element 2 (Pa):\n",
       "5137.974405728529\n",
-      "Stress of the element 3 (MPa):\n",
+      "Stress of the element 3 (Pa):\n",
       "-6966.62758417667\n",
-      "Stress of the element 4 (MPa):\n",
+      "Stress of the element 4 (Pa):\n",
       "3633.280204248289\n",
-      "Stress of the element 5 (MPa):\n",
+      "Stress of the element 5 (Pa):\n",
       "-6731.059587856135\n"
      ]
     }
@@ -685,7 +685,7 @@
     "    # Get the element stresses for the i-th element\n",
     "    stress = truss.get_element_stress(i)\n",
     "    # Print the stress of the i-th element\n",
-    "    print(\"Stress of the element\", i, \"(MPa):\")\n",
+    "    print(\"Stress of the element\", i, \"(Pa):\")\n",
     "    print(stress)"
    ]
   },
@@ -696,7 +696,7 @@
    "source": [
     "### Example Problem 3\n",
     "\n",
-    "In this final example, we will solve a problem consisting of a plane truss structure of trapezoidal shape composed of nine elements and six nodes. The trapezoidal truss has a base `L = 15.0 m` and a height `h = 7 m`; the cross-sectional area of the elements is `A = 0.005 m^2` and the elasticity modulus is `E = 210 GPa`. The first and sixth nodes of the plane truss are fixed in both directions by an hinge, while an horizontal load of `F = 20 kN` is applied to the second node.\n",
+    "In this final example, we will solve a problem consisting of a plane truss structure of trapezoidal shape composed of nine elements and six nodes. The trapezoidal truss has a base `L = 15.0 m` and a height `h = 7 m`; the cross-sectional area of the elements is `A = 0.005 m^2` and the elasticity modulus is `E = 210 MPa`. The first and sixth nodes of the plane truss are fixed in both directions by an hinge, while an horizontal load of `F = 20 kN` is applied to the second node.\n",
     "\n",
     "### Solution Steps using CSM\n",
     "\n",
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 135,
    "id": "3ef77a42",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 136,
    "id": "2b58bc39",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 137,
    "id": "28994304",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 138,
    "id": "bc12ffda",
    "metadata": {},
    "outputs": [
